Bug 292270 - Unable to disable natural sort order
Summary: Unable to disable natural sort order
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-23 12:45 UTC by bill p. (aka google01103)
Modified: 2014-02-19 11:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
attachment-29390-0.html (1.46 KB, text/html)
2014-02-19 10:41 UTC, johanreinink
Details
attachment-29390-1.dat (1 bytes, multipart/alternative)
2014-02-19 10:41 UTC, johanreinink
Details
snapshot1.png (208.76 KB, image/png)
2014-02-19 10:41 UTC, johanreinink
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bill p. (aka google01103) 2012-01-23 12:45:13 UTC
Version:           2.0 (using Devel) 
OS:                Linux

The option in settings to disable/enable "natural sort order" does not affect how items are sorted. Items are always sorted in "natural sort order" if the option is checked or not checked

Reproducible: Always

Steps to Reproduce:
check or uncheck the config box

Actual Results:  
items always sorted in "natural sort order"

Expected Results:  
sort order differs depending on on if "natural sort order" checked or not
Comment 1 Frank Reininghaus 2012-01-25 20:40:23 UTC
Thanks for the bug report! I can reproduce the problem.
Comment 2 Peter Penz 2012-01-28 21:11:38 UTC
Git commit a534cbe7825e581889f043adfbec3cea0ed51409 by Peter Penz.
Committed on 28/01/2012 at 21:17.
Pushed by ppenz into branch 'master'.

Fix regression: Respect "natural sorting" setting
FIXED-IN: 4.8.1

M  +10   -1    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +1    -0    dolphin/src/kitemviews/kfileitemmodel.h

http://commits.kde.org/kde-baseapps/a534cbe7825e581889f043adfbec3cea0ed51409
Comment 3 Peter Penz 2012-01-28 21:12:22 UTC
Git commit 803f50b4e78ca4de6b9fd6a6b4a6667c6d749a90 by Peter Penz.
Committed on 28/01/2012 at 21:17.
Pushed by ppenz into branch 'KDE/4.8'.

Fix regression: Respect "natural sorting" setting
FIXED-IN: 4.8.1

M  +10   -1    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +1    -0    dolphin/src/kitemviews/kfileitemmodel.h

http://commits.kde.org/kde-baseapps/803f50b4e78ca4de6b9fd6a6b4a6667c6d749a90
Comment 4 johanreinink 2014-02-19 10:20:32 UTC
Bug seems to be present in KDE 4.11.5
Comment 5 Frank Reininghaus 2014-02-19 10:26:20 UTC
(In reply to comment #4)
> Bug seems to be present in KDE 4.11.5

A more detailed description of the issue you are seeing would be helpful (like a screenshot showing the incorrect sort order in a minimal directory where you can reproduce the problem).

If there really is a bug, it's extremely unlikely that it has anything to do with the present report, so you might want to file a new report if you can provide additional information. Thanks.
Comment 6 johanreinink 2014-02-19 10:41:22 UTC
Created attachment 85231 [details]
attachment-29390-0.html

It seems to be gone now, it now behaves as expected, the sorting changes with the settings. I do have a screenshot showing the wrong sorting with the settings window, it definitely didn't reponds to changes in the settings then. Weird but now it works.

> From: frank78ac@googlemail.com
> To: johanreinink@hotmail.com
> Subject: [dolphin] [Bug 292270] Unable to disable natural sort order
> Date: Wed, 19 Feb 2014 10:26:20 +0000
> 
> https://bugs.kde.org/show_bug.cgi?id=292270
> 
> --- Comment #5 from Frank Reininghaus <frank78ac@googlemail.com> ---
> (In reply to comment #4)
> > Bug seems to be present in KDE 4.11.5
> 
> A more detailed description of the issue you are seeing would be helpful (like
> a screenshot showing the incorrect sort order in a minimal directory where you
> can reproduce the problem).
> 
> If there really is a bug, it's extremely unlikely that it has anything to do
> with the present report, so you might want to file a new report if you can
> provide additional information. Thanks.
> 
> -- 
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 7 johanreinink 2014-02-19 10:41:24 UTC
Created attachment 85232 [details]
attachment-29390-1.dat
Comment 8 johanreinink 2014-02-19 10:41:24 UTC
Created attachment 85233 [details]
snapshot1.png
Comment 9 Frank Reininghaus 2014-02-19 10:44:30 UTC
(In reply to comment #8)
> Created attachment 85233 [details]
> snapshot1.png

Are you sure that the directory was sorted by Name? This is not visible in the screenshot.
Comment 10 johanreinink 2014-02-19 10:55:02 UTC
I haven't changed it from sorting by name and I'm pretty sure it still was. I shoul've know to include this in the screenshot, I'm now doubting a bit, would've been the stupidest error. But the file have pretty random sizes and dates so it can't be sorted by size or date which only leaves the sorting by name, right?

> From: frank78ac@googlemail.com
> To: johanreinink@hotmail.com
> Subject: [dolphin] [Bug 292270] Unable to disable natural sort order
> Date: Wed, 19 Feb 2014 10:44:30 +0000
> 
> https://bugs.kde.org/show_bug.cgi?id=292270
> 
> --- Comment #9 from Frank Reininghaus <frank78ac@googlemail.com> ---
> (In reply to comment #8)
> > Created attachment 85233 [details]
> > snapshot1.png
> 
> Are you sure that the directory was sorted by Name? This is not visible in the
> screenshot.
> 
> -- 
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 11 johanreinink 2014-02-19 11:15:24 UTC
The only thing I can find that resembles this behaviour is having two dolphin windows and opening the configuration window of one of them, applying new settings and looking at the behaviour of the other. Since this behaves exactly as I observed (no direct changes in sorting, even after refreshing) that may have been the case.
I would think that with one dolphin window on that desktop I couldn't have mixed up but since everything works fine now I may have.

> From: frank78ac@googlemail.com
> To: johanreinink@hotmail.com
> Subject: [dolphin] [Bug 292270] Unable to disable natural sort order
> Date: Wed, 19 Feb 2014 10:44:30 +0000
> 
> https://bugs.kde.org/show_bug.cgi?id=292270
> 
> --- Comment #9 from Frank Reininghaus <frank78ac@googlemail.com> ---
> (In reply to comment #8)
> > Created attachment 85233 [details]
> > snapshot1.png
> 
> Are you sure that the directory was sorted by Name? This is not visible in the
> screenshot.
> 
> -- 
> You are receiving this mail because:
> You are on the CC list for the bug.