Fix regression: Respect "natural sorting" setting

BUG: 292270
FIXED-IN: 4.8.1